--- a/content/lectures/basic-graphs.org
+++ b/content/lectures/basic-graphs.org
@@ -11,21 +11,24 @@ title: Basic Graphs
 date: "2021-08-17T00:00:00Z"
 lecturedate: "2021-09-30T12:30:00Z"
 type: page
+
+links:
+   - category: Problems
+     links:
+     - uva: 11991
+       description: Try this before class.
+       display: true
+     - uva: 12321
+       description: We'll do this in class.
+       display: false
 ---
 
-## Synopsis
+** Synopsis
 
 Here is a quick review of graphs.  There are three representations you will want to know.
 
-## Video
+** Video
 
  - {{% ref "/videos/basic-graphs" %}}
 
-## Recommended Reading
-
- - Competitive Programming 
-
-## Problem
-
-  - {{< UVa id="3142" name="11991 - Easy Problem From Rujia Liu" >}}
-  - Represent the graph given in the lecture slides in all three ways using C++ code.
+{{<links>}}
